--- a/index.html
+++ b/index.html
@@ -8,36 +8,33 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://pagecdn.io/lib/easyfonts/fonts.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 d-none d-sm-block d-lg-none">
-          <h1>Carrito</h1>
+          <img id="car" src="static/cart.png" alt="Cart." />
         </div>
       </div>
 
-      <div class="row">
+      <div id="mainTitle" class="row">
         <div class="col-lg-10 col-sm-12">
-          <h1>Texto Principal</h1>
+          <h1 class="rochester">Texto Principal</h1>
         </div>
         <div class="col-lg-2 col-sm-12 d-none d-lg-block">
-          <h1>Carrito</h1>
+          <img id="cart" src="static/cart.png" alt="Cart." />
+          <span id="cartItems"></span>
         </div>
       </div>
-      <hr />
 
       <div class="row">
         <div class="col-12 d-none d-lg-block">
-          <img src="static/unsplash_LV2p9Utbkbw.png" alt="Burguer" />
+          <img id="banner" src="static/burgerBanner.png" alt="Burguer" />
         </div>
       </div>
+      <hr />
 
       <div class="row">
         <div class="col-12 d-none d-lg-block">
@@ -46,19 +43,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active burg" aria-current="page" href="#">Burguers</a>
+                    <a id="burg" class="nav-link active" aria-current="page">Burguers</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active tac" href="#">Tacos</a>
+                    <a id="tac" class="nav-link active">Tacos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active sal" href="#">Salads</a>
+                    <a id="sal" class="nav-link active">Salads</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active des" href="#">Desserts</a>
+                    <a id="des" class="nav-link active">Desserts</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active dri" href="#">Drinks & Sides</a>
+                    <a id="dri" class="nav-link active">Drinks & Sides</a>
                   </li>
                 </ul>
               </div>
@@ -67,14 +64,38 @@
         </div>
       </div>
 
-      <div class="row">
+      <div id="mainContent" class="row">
         <div class="col-lg-12">
-          <h1 class="text-center roboto">Burguers</h1>
+          <h1 id="foodTitle" class="text-center roboto">Burguers</h1>
         </div>
       </div>
-      <hr />
 
-      <div class="foodList"></div>
+      <div id="food">
+        <div id="foodList" class="row justify-content-center"></div>
+        <div id="orderTable">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Item</th>
+                <th scope="col">Qty.</th>
+                <th scope="col">Description</th>
+                <th scope="col">Unit Price</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Modify</th>
+              </tr>
+            </thead>
+            <tbody id="orderTableBody"></tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 text-center">
+          <footer id="pageFooter">
+            Contact us: +57 3102171020 - info@restaurant.com - @restaurant
+          </footer>
+        </div>
+      </div>
     </div>
     <script src="main.js"></script>
     <script
