--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Parcial 1 Web</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,26 +16,27 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 d-none d-sm-block d-lg-none">
-          <img id="car" src="static/cart.png" alt="Cart." />
+          <img onclick="orderResume()" src="static/cart.png" alt="Cart." />
         </div>
       </div>
 
       <div id="mainTitle" class="row">
         <div class="col-lg-10 col-sm-12">
-          <h1 class="rochester">Texto Principal</h1>
+          <h1 class="rochester">Restaurant & Longue</h1>
         </div>
         <div class="col-lg-2 col-sm-12 d-none d-lg-block">
           <img id="cart" src="static/cart.png" alt="Cart." />
           <span id="cartItems"></span>
         </div>
       </div>
+      <hr id="titleHr" class="d-none d-lg-block" />
 
       <div class="row">
         <div class="col-12 d-none d-lg-block">
           <img id="banner" src="static/burgerBanner.png" alt="Burguer" />
         </div>
       </div>
-      <hr />
+      <hr class="d-none d-lg-block" />
 
       <div class="row">
         <div class="col-12 d-none d-lg-block">
@@ -66,9 +68,10 @@
 
       <div id="mainContent" class="row">
         <div class="col-lg-12">
-          <h1 id="foodTitle" class="text-center roboto">Burguers</h1>
+          <h1 id="foodTitle" class="text-center roboto d-none d-lg-block">Burguers</h1>
         </div>
       </div>
+      <hr class="foodHr d-none d-lg-block" />
 
       <div id="food">
         <div id="foodList" class="row justify-content-center"></div>
